Added additional images

--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
             <div class="mil-top-panel-2">
                 <div class="container">
                     <div class="mil-left-side mil-tp-transition" id="swupTpLeft">
-                        <a href="#top" class="mil-logo mil-scroll-to" data-no-swup>
+                        <a href="/" class="mil-logo mil-scroll-to" data-no-swup>
                             <img src="img/logo.png" alt="logo" class="mil-scale-img">
                         </a>
                     </div>
 
                     <div class="mil-onepage-nav" id="swup-opm">
                         <ul>
-                            <li><a href="index.html">Home</a></li>
+                            <li><a href="/">Home</a></li>
                             <li><a href="#about" class="mil-scroll-to" data-no-swup>About</a></li>
                             <li><a href="portfolio.html">Portfolio</a></li>
                             <li><a href="contact.html">Contact</a></li>
