--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
         <div class="mil-top-panel-2">
             <div class="container">
                 <div class="mil-left-side mil-tp-transition" id="swupTpLeft">
-                    <a href="#top" class="mil-logo mil-scroll-to" data-no-swup>
+                    <a href="/" class="mil-logo mil-scroll-to" data-no-swup>
                         <img src="img/logo.png" alt="logo" class="mil-scale-img">
                     </a>
                 </div>
@@ -174,13 +174,14 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="mil-work-card mil-stl mil-mb30">
+                                
+                                <!-- <div class="mil-work-card mil-stl mil-mb30">
                                     <div class="mil-cover mil-square mil-up">
                                         <div class="mil-hover-frame">
                                             <img src="img/works/design/6.jpg" alt="cover" class="mil-scale-img" data-value-1="1.15" data-value-2="1">
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
 
                                 <div class="mil-work-card mil-stl mil-mb30">
                                     <div class="mil-cover mil-square mil-up">
@@ -492,13 +493,30 @@
                                         </div>
                                     </div>
                                 </div>
+
+                                <div class="mil-work-card mil-stl mil-mb30">
+                                    <div class="mil-cover mil-square mil-up">
+                                        <div class="mil-hover-frame">
+                                            <img src="img/works/photography/23.jpg" alt="cover" class="mil-scale-img" data-value-1="1.15"
+                                                data-value-2="1">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="mil-work-card mil-stl mil-mb30">
+                                    <div class="mil-cover mil-square mil-up">
+                                        <div class="mil-hover-frame">
+                                            <img src="img/works/photography/24.jpg" alt="cover" class="mil-scale-img" data-value-1="1.15"
+                                                data-value-2="1">
+                                        </div>
+                                    </div>
+                                </div>
                             
                             </div>
                             <div class="col-md-6">
                                 <div class="mil-work-card mil-stl mil-mb30">
                                     <div class="mil-cover mil-square mil-up">
                                         <div class="mil-hover-frame">
-                                            <img src="img/works/photography/12.jpg" alt="cover" class="mil-scale-img" data-value-1="1.15"
+                                            <img src="img/works/photography/25.jpg" alt="cover" class="mil-scale-img" data-value-1="1.15"
                                                 data-value-2="1">
                                         </div>
                                     </div>
